--- a/expense-ansible/inventory.ini
+++ b/expense-ansible/inventory.ini
@@ -1,12 +1,12 @@
 [mysql]
-mysql.daws81s.online
+mysql.ramops.online
 
 [backend]
-backend.daws81s.online
+backend.ramops.online
 
 [frontend]
-frontend.daws81s.online
+frontend.ramops.online
 
 [all:vars]
-ansible_user=ec2-user
-ansible_password=ram123
+ansible_user = ec2-user
+ansible_password = ram123
