--- a/expense-ansible/backend.service
+++ b/expense-ansible/backend.service
@@ -3,7 +3,7 @@ Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="mysql.daws81s.online"
+Environment=DB_HOST="mysql.ramops.online"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
