--- a/expense-ansible/expense.conf
+++ b/expense-ansible/expense.conf
@@ -1,6 +1,6 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://backend.daws81s.online:8080/; }
+location /api/ { proxy_pass http://backend.ramops.online:8080/; }
 
 location /health {
   stub_status on;
