--- a/expense-ansible/mysql.yaml
+++ b/expense-ansible/mysql.yaml
@@ -3,7 +3,7 @@
   become: yes
   vars:
     mysql_root_password: ExpenseApp@1
-    login_host: mysql.daws81s.online
+    login_host: mysql.ramops.online
   tasks:
   - name: ansible to install pymysql
     ansible.builtin.pip:
